Revision history for hwd

0.21_01 Mon May 29 14:43:33 PDT 2006
        [ENHANCEMENTS]
        * Added support for assignees for tasks.

0.20    Wed Mar  1 20:30:52 CST 2006
        [ENHANCEMENTS]
        * Allows times for tasks and work to be expressed in minutes.
          "2h" is the same as "120m".

        * Added column headings to default output

        * Task indent level may now be done with asterisks as well as
          dashes, and the indent level may have whitespace following it.
          The following are all valid:

          -Level 1 the old way
          --Level 2 the old way
          --- Level 3 with whitespace
          ***Level 3 the new way
          ****  Level 4 the new way with whitespace
          --**IMPORTANT** (Level 2, task name "**IMPORTANT**")

0.18    Tue Feb 21 15:09:29 PST 2006
        [ENHANCEMENTS]
        * Better reporting of where errors are found.  Now tells the line
          number and filename of the file where the error is found.

        * Added new flags: --strict, --nostrict

          By default, C<--strict> is on and hwd will not print output if
          there are errors in the input.  You can use the C<--nostrict>
          for when you're getting your first schedule pulled together
          and don't mind the errors and the inaccuracies they cause,
          in the name of seeing some output.


0.16    Mon Feb 13 18:55:49 CST 2006
        [ENHANCEMENTS]
        * Work on tasks may now refer to the most recent task with a
          task number of "^".  This means you can do tracking without
          having to have task numbers.

        [DOCUMENTATION]
        * Much more documentation on the file format.  See "hwd --man".


0.14    Thu Feb  9 17:03:15 CST 2006
        * NO NEW FEATURES: Put out to get new package name in CPAN.
        * Removed use of Date::Manip
        * Added more docs to explain file format.

Last release as App-HWD
0.12    Dec 08 2005
        [ENHANCEMENTS]