@@ -6,11 +6,9 @@ HWD.pm
 Task.pm
 Work.pm
 bin/hwd
-bin/hwd-burnchart
 eg/sked.hwd
 etc/hwd.vim
 t/00-load.t
-t/burndown.t
 t/hwd.t
 t/pod-coverage.t
 t/pod.t
